# agents-at-scale-marketplace

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  marketplace.json
.claude/: settings.json
.claude/hooks/: protect-git-push.sh
.github/: dependabot.yml  release-please-config.json  release-please-manifest.json
.github/workflows/: _reusable-charts-cicd.yaml  _reusable-docker-cicd.yaml  _reusable-docs-ci.yaml  _reusable-docs-cicd.yaml  _reusable-phoenix-ci.yaml  _reusable-validate-pr-title.yaml  cd-gh-pages.yaml  charts_cicd.yaml  docs-ci.yaml  docs-gh-pages-cd.yaml  docs_gh_pages_cd.yaml  gh-pages.yaml  main-push-temp-validation.yaml  main-push.yaml  phoenix-ci.yaml  phoenix_ci.yaml  pull-request.yaml  release-please.yaml  test-deploy-charts.yaml  validate_pr_title.yaml
docs/: .gitignore  CHANGELOG.md  package-lock.json  package.json
execution-engines/langchain-executor/: CHANGELOG.md  Dockerfile  Makefile  README.md  devspace.yaml  pyproject.toml
execution-engines/langchain-executor/chart/: Chart.yaml  values.yaml
execution-engines/langchain-executor/chart/templates/: _helpers.tpl  deployment.yaml  executionengine.yaml  service.yaml  serviceaccount.yaml
execution-engines/langchain-executor/examples/: demo.yaml  sample-agent.yaml  sample-rag-agent.yaml
executors/claude-agent-sdk/: CHANGELOG.md  Dockerfile  README.md  devspace.yaml  pyproject.toml  setup.cfg
executors/claude-agent-sdk/chart/: Chart.yaml  values.yaml
executors/claude-agent-sdk/chart/templates/: deployment.yaml  executionengine.yaml  rbac.yaml  sandbox-rbac.yaml  sandbox-template.yaml  sandbox-warmpool.yaml  scheduler-configmap.yaml  scheduler-deployment.yaml  scheduler-rbac.yaml  scheduler-service.yaml  service.yaml
executors/claude-agent-sdk/src/claude_agent_executor/: __main__.py  app.py  executor.py
executors/claude-agent-sdk/src/claude_agent_scheduler/: __main__.py  config.py  observability.py  proxy.py  sandbox_manager.py
executors/claude-agent-sdk/tests/: conftest.py  test_context_id.py  test_mcp_options.py  test_proxy.py  test_reaper.py  test_rebuild_map.py  test_sandbox_cache.py  test_scheduler_config.py  test_scheduler_integration.py  test_streaming.py
executors/openai-file-inputs/: Dockerfile  README.md  devspace.yaml  pyproject.toml  setup.cfg
executors/openai-file-inputs/chart/: Chart.yaml  values.yaml
executors/openai-file-inputs/chart/templates/: executionengine.yaml  rbac.yaml
executors/openai-file-inputs/src/openai_file_inputs_executor/: __main__.py  app.py  config.py  executor.py  file_api.py  models.py  providers.py
executors/openai-responses/: .gitignore  CHANGELOG.md  Dockerfile  README.md  devspace.yaml  pyproject.toml  setup.cfg
executors/openai-responses/chart/: Chart.yaml  values.yaml
executors/openai-responses/chart/templates/: deployment.yaml  pvc.yaml  serviceaccount.yaml
executors/openai-responses/examples/: companies-house-agent.yaml  company-lookup-agent.yaml  dsl-generator-agent.yaml  sql-generator-agent.yaml  website-search-agent.yaml
executors/openai-responses/scripts/: test-cluster.sh  test-company-lookup.sh  test-local.sh
executors/openai-responses/src/openai_responses_executor/: __main__.py  app.py  config.py  executor.py  models.py
executors/openai-responses/tests/: test_executor.py  test_model_config.py
services/: .gitignore
services/ark-sandbox/: CHANGELOG.md  Dockerfile  Makefile  README.md  devspace.yaml  pyproject.toml
services/ark-sandbox/chart/: Chart.yaml  values.yaml
services/ark-sandbox/chart/crds/: sandbox.yaml  sandboxpool.yaml  sandboxtemplate.yaml
services/ark-sandbox/chart/templates/: NOTES.txt  deployment.yaml  httproute.yaml  mcpserver.yaml  rbac.yaml  service.yaml
services/ark-sandbox/scripts/: run_controller.py
services/ark-sandbox/src/: __init__.py  __main__.py  main.py
services/ark-sandbox/src/controller/: __init__.py  pool.py  sandbox.py
services/ark-sandbox/src/k8s/: __init__.py  manager.py
services/ark-sandbox/src/sandbox_mcp/: __init__.py  server.py  tools.py
services/ark-sandbox/templates/: claim-sandbox.yaml  create-sandbox.yaml  delete-sandbox.yaml  exec-in-sandbox.yaml  wait-sandbox.yaml
services/ark-sandbox/tests/: README.md  __init__.py  test_basic.py  test_k8s_manager.py  test_mcp_tools.py  test_templates.py
services/evaluator/: .dockerignore  Dockerfile  Makefile  README.md  devspace.yaml  pyproject.toml
services/evaluator/chart/: Chart.yaml  values.yaml
services/evaluator/chart/templates/: _helpers.tpl  deployment.yaml  evaluator.yaml  httproute.yaml
services/evaluator/docs/: api-reference.md  configuration.md  deterministic-evaluation.md
services/evaluator/docs/examples/: direct-evaluation.json  direct-evaluation.yaml  langfuse-evaluation.json  metrics-evaluation.json  ragas-evaluation.json  sample-evaluator-with-selector.yaml  sample-evaluator.yaml
services/evaluator/docs/examples/crds/: direct-evaluation.yaml  evaluator-with-selector.yaml  query-evaluation.yaml
services/evaluator/src/evaluator/: agent_resolver.py  model_resolver.py
services/evaluator/src/evaluator/core/: __init__.py
services/evaluator/src/evaluator/helpers/: __init__.py  event_analyzer.py  query_helper.py  sequence_helper.py
services/evaluator/src/evaluator/metrics/: ark_client.py  evaluator.py  metrics.py  query_resolver.py
services/evaluator/src/evaluator/oss_providers/: __init__.py
services/evaluator/src/evaluator/providers/: __init__.py  event_evaluation.py  query_evaluation.py
services/evaluator/tests/: conftest.py  test_app.py  test_metrics.py  test_providers.py  test_types.py
services/file-gateway/services/file-api/: CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
services/file-gateway/services/file-api/src/file_api/: __main__.py  app.py  config.py  s3_client.py
services/noah/: CHANGELOG.md  README.md  pyproject.toml
services/noah/chart/: Chart.yaml  values.yaml
services/noah/chart/templates/: agent.yaml  deployment.yaml  mcpserver.yaml
services/noah/src/ark_runtime_mcp/: __main__.py  server.py
(+500 files in other folders)
