[project]
name = "executor-openai-file-inputs"
version = "0.1.0"
description = "OpenAI Responses API executor with file input support via the OpenAI Files API"
authors = [
    {name = "McKinsey Agent Platform Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.60.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "ark-sdk==0.1.60",
    "openinference-instrumentation-openai",
    "opentelemetry-exporter-otlp-proto-http",
    "urllib3>=2.6.0",
    "a2a-sdk[http-server]>=0.3.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/mckinsey/agents-at-scale-marketplace"
Documentation = "https://mckinsey.github.io/agents-at-scale-marketplace/executors/openai-file-inputs/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pyright>=1.1.402",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
executor-openai-file-inputs = "openai_file_inputs_executor.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openai_file_inputs_executor"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
