[project]
name = "evaluator"
version = "0.1.0"
description = "AI evaluation service with LLM-as-a-Judge, deterministic metrics, RAGAS, and Langfuse"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "McKinsey Agent Platform Team"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "gunicorn>=21.2.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "openai>=1.0.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-community>=0.2.0",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "nest-asyncio>=1.5.0",
    "Pillow>=10.0.0",
    "urllib3>=2.6.0",
]

[project.optional-dependencies]
kubernetes = [
    "kubernetes>=30.1.0",
]
oss = [
    "langfuse>=2.0.0,<4.0.0",
    "ragas>=0.3.1",
]
all = [
    "evaluator[kubernetes,oss]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.28.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Repository = "https://github.com/mckinsey/agents-at-scale-marketplace"
Documentation = "https://mckinsey.github.io/agents-at-scale-marketplace/services/evaluator/"

[project.scripts]
evaluator = "evaluator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evaluator"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "asyncio: marks tests as async (pytest-asyncio)",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "kubernetes: marks tests that require kubernetes",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
line-length = 120
target-version = "py312"
