[project]
name = "aas-runtime-mcp"
version = "0.1.4"
description = "AAS Runtime MCP server providing kubectl, helm, bash, and runtime tools"
authors = [
    {name = "AAS Team", email = "aas@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aas_runtime_mcp"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'


[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["aas_runtime_mcp"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]