[project]
name = "file-api"
version = "0.1.0"
description = "FastAPI service for S3 file operations via VersityGW"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "boto3>=1.35.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/file_api"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]
